--- a/Languages/Korean/DefInjected/ThingDef/Buildings_Rugs.xml
+++ b/Languages/Korean/DefInjected/ThingDef/Buildings_Rugs.xml
@@ -20,7 +20,7 @@
   <TrumbCarpet.description>엉뚱한 콜로니에 살게 된 거대 생명체, 이제 그 털로 콜로니를 장식하다</TrumbCarpet.description>
 
   <InsectCarpet.label>곤충의 카펫</InsectCarpet.label>
-  <InsectCarpet.description>이 러그는 한쪽은 예술 작품이고 다른 쪽은 유전 공학의 조합입니다... 집의 편안함을 결합하고 벽난로의 따뜻함을 좋아하며 따뜻함에 저울을 열고 이름이 지정된 현관문을 보호합니다. 초인종이나 알람시계 대신 다른 소리를 내기도 하고, 때로는 냉장고로 옮겨가는 것 같기도 하고.. 때로는 고양이를 안아주기도 합니다.</InsectCarpet.description>
+  <InsectCarpet.description>이 러그는 한쪽은 예술 작품이고 다른 쪽은 유전 공학의 조합입니다... 집의 편안함을 결합하고 벽난로의 따뜻함을 좋아하며 따뜻함에 저울을 열고 이름이 지정된 현관문을 보호합니다. 초인종이나 알람시계 대신 다른 소리를 내기도 하고, 때로는 냉장고로 옮겨가는 것 같기도 하고.. 때로는 고양이를 안아주기도 합니다</InsectCarpet.description>
 
 
 </LanguageData>
