--- a/Languages/Portuguese/DefInjected/ArchitectSense.DesignationSubCategoryDef/SubCategories.xml
+++ b/Languages/Portuguese/DefInjected/ArchitectSense.DesignationSubCategoryDef/SubCategories.xml
@@ -10,7 +10,8 @@
   <SubCategory_heart.label>coração</SubCategory_heart.label>
   <SubCategory_heart.description>coração.</SubCategory_heart.description>
 
-
+ <SubCategory_Traps.label>armadilhas</SubCategory_Traps.label>
+  <SubCategory_Traps.description>armadilhas especiais para defender.</SubCategory_Traps.description>
   <!--<SubCategory_Columns.label>Coluna</SubCategory_Columns.label>-->
   <!--<SubCategory_Columns.description>Coluna - parte de uma estrutura arquitetônica, um pilar cilíndrico, de madeira, pedra ou metal, que sustenta a cobertura.</SubCategory_Columns.description>-->
 
