--- a/Languages/Portuguese/DefInjected/ThingDef/Buildings_Rugs.xml
+++ b/Languages/Portuguese/DefInjected/ThingDef/Buildings_Rugs.xml
@@ -20,8 +20,7 @@
   <TrumbCarpet.description>Uma grande criatura que foi parar na colônia errada, agora seu pelo enfeita a colônia</TrumbCarpet.description>
 
   <InsectCarpet.label>Tapete de inseto</InsectCarpet.label>
-  <InsectCarpet.description>Este tapete é uma obra de arte por um lado, uma combinação de engenharia genética do outro... combina o conforto do lar, adora o calor da lareira, abre a balança ao calor, protege a porta da frente do nome e vira-lata faz sons diferentes, em vez de campainha ou despertador, às vezes parece que ele migra para a geladeira..às vezes ele abraça o gato.
-</InsectCarpet.description>
+  <InsectCarpet.description>Este tapete é uma obra de arte por um lado, uma combinação de engenharia genética do outro... combina o conforto do lar, adora o calor da lareira, abre a balança ao calor, protege a porta da frente do nome e vira-lata faz sons diferentes, em vez de campainha ou despertador, às vezes parece que ele migra para a geladeira..às vezes ele abraça o gato.</InsectCarpet.description>
 
 
 </LanguageData>
