--- a/Languages/Russian/DefInjected/ThingDef/Buildings_Rugs.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Buildings_Rugs.xml
@@ -20,8 +20,7 @@
   <TrumbCarpet.description>Великое существо, оказавшееся не в той колонии, теперь его мех украшает колонию.</TrumbCarpet.description>
 
   <InsectCarpet.label>Ковер из насекомых</InsectCarpet.label>
-  <InsectCarpet.description>Этот коврик-произведение искусства с одной стороны,соединение генной инженерии со второй стороны...сочетает в себе домашний уют,любит тепло от камина,раскрывая чешуйки теплу,защищает входную дверь от названных и бродячих.Издаёт разные звуки,вместо дверного звонка или будильника ,иногда кажется что он мигрирует к холодильнику..иногда обнимает кота
-</InsectCarpet.description>
+  <InsectCarpet.description>Этот коврик-произведение искусства с одной стороны,соединение генной инженерии со второй стороны...сочетает в себе домашний уют,любит тепло от камина,раскрывая чешуйки теплу,защищает входную дверь от названных и бродячих.Издаёт разные звуки,вместо дверного звонка или будильника ,иногда кажется что он мигрирует к холодильнику..иногда обнимает кота</InsectCarpet.description>
 
 
 </LanguageData>
