--- a/Languages/Korean/DefInjected/RecipeDef/Recipes_UniversalFermenter.xml
+++ b/Languages/Korean/DefInjected/RecipeDef/Recipes_UniversalFermenter.xml
@@ -22,5 +22,6 @@
   <Make_DriedNori_x5.label>마른 해초 x5</Make_DriedNori_x5.label>
   <Make_DriedNori_x5.description>신선한 해초를 말리세요. 절차는 2일이 소요됩니다.</Make_DriedNori_x5.description>
 
-
+ <Make_Ethanol.label>달빛을 만드세요</Make_Ethanol.label>
+  <Make_Ethanol.description>원시 에탄올을 생산합니다. 2일이 소요됩니다</Make_Ethanol.description>
 </LanguageData>
