--- a/Languages/Portuguese/DefInjected/RecipeDef/Recipes_UniversalFermenter.xml
+++ b/Languages/Portuguese/DefInjected/RecipeDef/Recipes_UniversalFermenter.xml
@@ -23,4 +23,6 @@
   <Make_DriedNori_x5.description>Algas frescas secas. O processo demora 2 dias.</Make_DriedNori_x5.description>
 
 
+  <Make_Ethanol.label>Faça luar</Make_Ethanol.label>
+  <Make_Ethanol.description>Produza etanol primitivo. Demorará 2 dias</Make_Ethanol.description>
 </LanguageData>
