--- a/Languages/English/DefInjected/RecipeDef/Recipes_Cannibals.xml
+++ b/Languages/English/DefInjected/RecipeDef/Recipes_Cannibals.xml
@@ -1,10 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <MinceHemogenPack.label>Bleeding</MinceHemogenPack.label>
-  <MinceHemogenPack.description>Blood pumping.</MinceHemogenPack.description>
-  <MinceHemogenPack.jobString>Butchering.</MinceHemogenPack.jobString>
-
   <CookMealFishAndBeer.label>Make beer with fish</CookMealFishAndBeer.label>
   <CookMealFishAndBeer.description>Real food for men.</CookMealFishAndBeer.description>
   <CookMealFishAndBeer.jobString>Trains.</CookMealFishAndBeer.jobString>
@@ -17,5 +13,9 @@
   <MakeYzvar.description>Cook uzvar from dried fruits.</MakeYzvar.description>
   <MakeYzvar.jobString>Cooking uzvar.</MakeYzvar.jobString>
 
+
+  <!--<MinceHemogenPack.label>Bleeding</MinceHemogenPack.label>-->
+  <!--<MinceHemogenPack.description>Blood pumping.</MinceHemogenPack.description>-->
+  <!--<MinceHemogenPack.jobString>Butchering.</MinceHemogenPack.jobString>-->
 
 </LanguageData>
