--- a/Languages/Korean/DefInjected/RecipeDef/Recipes_Cannibals.xml
+++ b/Languages/Korean/DefInjected/RecipeDef/Recipes_Cannibals.xml
@@ -1,10 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <MinceHemogenPack.label>출혈</MinceHemogenPack.label>
-  <MinceHemogenPack.description>혈액 펌핑.</MinceHemogenPack.description>
-  <MinceHemogenPack.jobString>도살.</MinceHemogenPack.jobString>
-
   <CookMealFishAndBeer.label>생선으로 맥주 만들기</CookMealFishAndBeer.label>
   <CookMealFishAndBeer.description>진짜 남자들의 음식.</CookMealFishAndBeer.description>
   <CookMealFishAndBeer.jobString>기차.</CookMealFishAndBeer.jobString>
@@ -17,5 +13,9 @@
   <MakeYzvar.description>말린 과일로 우즈바르를 요리하세요.</MakeYzvar.description>
   <MakeYzvar.jobString>우즈바르 요리.</MakeYzvar.jobString>
 
+
+  <!--<MinceHemogenPack.label>출혈</MinceHemogenPack.label>-->
+  <!--<MinceHemogenPack.description>혈액 펌핑.</MinceHemogenPack.description>-->
+  <!--<MinceHemogenPack.jobString>도살.</MinceHemogenPack.jobString>-->
 
 </LanguageData>
