--- a/Languages/Portuguese/DefInjected/RecipeDef/Recipes_Production.xml
+++ b/Languages/Portuguese/DefInjected/RecipeDef/Recipes_Production.xml
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <Make_EthanolFromAlcohol.label>Destilação de álcool de bebidas</Make_EthanolFromAlcohol.label>
-  <Make_EthanolFromAlcohol.description>A destilação é um processo no qual componentes voláteis (vapores) evaporam de uma mistura fermentada e se condensam para formar álcool.</Make_EthanolFromAlcohol.description>
-  <Make_EthanolFromAlcohol.jobString>Destilação</Make_EthanolFromAlcohol.jobString>
+  <Make_EthanolFromAlcohol.label>Дистилляция спирта из алкогольных напитков</Make_EthanolFromAlcohol.label>
+  <Make_EthanolFromAlcohol.description>Дистилляция - это процесс в ходе, которого летучие компоненты (пары) испаряются из перебродившей смеси и конденсируются, превращаясь в спирт.</Make_EthanolFromAlcohol.description>
+  <Make_EthanolFromAlcohol.jobString>перегонка</Make_EthanolFromAlcohol.jobString>
 
+
+  <!--<Make_EthanolFromAlcohol.label>Destilação de álcool de bebidas</Make_EthanolFromAlcohol.label>-->
+  <!--<Make_EthanolFromAlcohol.description>A destilação é um processo no qual componentes voláteis (vapores) evaporam de uma mistura fermentada e se condensam para formar álcool.</Make_EthanolFromAlcohol.description>-->
+  <!--<Make_EthanolFromAlcohol.jobString>Destilação</Make_EthanolFromAlcohol.jobString>-->
 
 </LanguageData>
