--- a/Languages/Russian/DefInjected/TerrainDef/Terrain_FloorStone.xml
+++ b/Languages/Russian/DefInjected/TerrainDef/Terrain_FloorStone.xml
@@ -6,6 +6,86 @@
 Beauty: 8.</FloorStoneStaggeredNefrBrick.description>
 
 
+  <!-- <TerrainDef ParentName="SK_TileStoneBase">
+		<defName>FloorStoneStaggeredTESTBrick</defName>
+		<label>TEST плитка</label>
+		<renderPrecedence>270</renderPrecedence>
+		<description>Каменный пол из аккуратных квадратных плит нефрита
+Beauty: 8.</description>
+		<texturePath>Things/FlorTest</texturePath>
+		<researchPrerequisites>
+			<li>Stone_floor_B4</li>
+		</researchPrerequisites>
+		<statBases>
+			<WorkToBuild>820</WorkToBuild>
+			<Beauty>8</Beauty>
+		</statBases>
+		<costList>
+			<Jade>4</Jade>
+		</costList>
+		<designationCategory>NaturalFloors</designationCategory>
+	</TerrainDef>
+
+<TerrainDef ParentName="SK_TileStoneBase">
+		<defName>FloorStoneStaggeredTEST2Brick</defName>
+		<label>TEST 2 плитка</label>
+		<renderPrecedence>270</renderPrecedence>
+		<description>Каменный пол из аккуратных квадратных плит нефрита
+Beauty: 8.</description>
+		<texturePath>Things/FlorTest2</texturePath>
+		<researchPrerequisites>
+			<li>Stone_floor_B4</li>
+		</researchPrerequisites>
+		<statBases>
+			<WorkToBuild>820</WorkToBuild>
+			<Beauty>8</Beauty>
+		</statBases>
+		<costList>
+			<Jade>4</Jade>
+		</costList>
+		<designationCategory>NaturalFloors</designationCategory>
+	</TerrainDef>
+	
+	<TerrainDef ParentName="SK_TileStoneBase">
+		<defName>FloorStoneStaggeredTEST3Brick</defName>
+		<label>TEST 3 плитка</label>
+		<renderPrecedence>270</renderPrecedence>
+		<description>Каменный пол из аккуратных квадратных плит нефрита
+Beauty: 8.</description>
+		<texturePath>Things/FlorTest3</texturePath>
+		<researchPrerequisites>
+			<li>Stone_floor_B4</li>
+		</researchPrerequisites>
+		<statBases>
+			<WorkToBuild>820</WorkToBuild>
+			<Beauty>8</Beauty>
+		</statBases>
+		<costList>
+			<Jade>4</Jade>
+		</costList>
+		<designationCategory>NaturalFloors</designationCategory>
+	</TerrainDef>
+
+<TerrainDef ParentName="SK_TileStoneBase">
+		<defName>FloorStoneStaggeredTEST4Brick</defName>
+		<label>TEST 4 плитка</label>
+		<renderPrecedence>270</renderPrecedence>
+		<description>Каменный пол из аккуратных квадратных плит нефрита
+Beauty: 8.</description>
+		<texturePath>Things/FlorTest4</texturePath>
+		<researchPrerequisites>
+			<li>Stone_floor_B4</li>
+		</researchPrerequisites>
+		<statBases>
+			<WorkToBuild>820</WorkToBuild>
+			<Beauty>8</Beauty>
+		</statBases>
+		<costList>
+			<Jade>4</Jade>
+		</costList>
+		<designationCategory>NaturalFloors</designationCategory>
+	</TerrainDef> -->
+
   <FloorStoneMosaicNEF.label>Нефритовая мозайка</FloorStoneMosaicNEF.label>
   <FloorStoneMosaicNEF.description>Каменный пол из аккуратной мозаики из нефрита 
 Beauty: 7.</FloorStoneMosaicNEF.description>
