--- a/Languages/English/DefInjected/ThingDef/NewFragments.xml
+++ b/Languages/English/DefInjected/ThingDef/NewFragments.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <Fragment_Icon.label>Ограждение</Fragment_Icon.label>
+  <Fragment_Icon.label>Fencing</Fragment_Icon.label>
   <Fragment_Crater_Smal.label>---</Fragment_Crater_Smal.label>
   <Fragment_Crater_medium.label>---</Fragment_Crater_medium.label>
   <Fragment_Crater_grande.label>---</Fragment_Crater_grande.label>
