--- a/Languages/Russian/DefInjected/XmlExtensions.SettingsMenuDef/Settings_main.xml
+++ b/Languages/Russian/DefInjected/XmlExtensions.SettingsMenuDef/Settings_main.xml
@@ -6,9 +6,11 @@
   <Watcher_Content_Settings.settings.2.label>Добавляем алкоголь в рецепты крафта медикаментов?</Watcher_Content_Settings.settings.2.label>
   <Watcher_Content_Settings.settings.3.label>Добавляем извлечение гемогена  из трупов?</Watcher_Content_Settings.settings.3.label>
   <Watcher_Content_Settings.settings.4.label>Добавить постройку взрывной двери?</Watcher_Content_Settings.settings.4.label>
-  <Watcher_Content_Settings.settings.8.text>Для применения всех параметров требуется перезагрузка</Watcher_Content_Settings.settings.8.text>
+  <Watcher_Content_Settings.settings.5.label>Сортируем мины по коробкам или пусть так валяются ?</Watcher_Content_Settings.settings.5.label>
+  <Watcher_Content_Settings.settings.9.text>Для применения всех параметров требуется перезагрузка</Watcher_Content_Settings.settings.9.text>
 
 
+  <!--<Watcher_Content_Settings.settings.8.text>Для применения всех параметров требуется перезагрузка</Watcher_Content_Settings.settings.8.text>-->
   <!--<Watcher_Content_Settings.settings.7.text>Для применения всех параметров требуется перезагрузка</Watcher_Content_Settings.settings.7.text>-->
 
 </LanguageData>
