--- a/Languages/English/DefInjected/ThingDef/Buildings_Walls.xml
+++ b/Languages/English/DefInjected/ThingDef/Buildings_Walls.xml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <Walltextile.label>Wall</Walltextile.label>
-  <Walltextile.description>A simple wall that can support a roof is made of fabric.</Walltextile.description>
+  <!--<Walltextile.label>Wall</Walltextile.label>-->
+  <!--<Walltextile.description>A simple wall that can support a roof is made of fabric.</Walltextile.description>-->
 
 
 </LanguageData>
